追加テスト

--- a/0604.html
+++ b/0604.html
@@ -1,1 +1,13 @@
-test06
+<html>
+
+<head>
+    <link rel="stylesheet" href="0604.css">
+</head>
+
+<body>
+    <p>cssテスト用文字列</p>
+    <a href="index.html">戻る</a>
+</body>
+
+
+</html>
