画像のスタイルテスト

--- a/index.html
+++ b/index.html
@@ -1,7 +1,21 @@
-<html>
-cssファイル
-<br>
-<a href="0604.html">0604.html</a>
-<br>
+<!DOCTYPE html>
+<html lang="ja">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+
+<body>
+    cssファイル
+    <br>
+    <a href="0604.html">0604.html</a><br>
+
+    画像表示のテスト<br>
+    <a href="0625.html">0625.html</a>
+
+
+</body>
 
 </html>
